<resources>
    <string name="app_name">My_callculator</string>
    <string name="app">"简单计算器"</string>
    <string name="plus">+</string>
    <string name="divide">÷</string>
    <string name="sub">-</string>
    <string name="multiply">x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">CE</string>
    <string name="clear">C</string>
    <string name="left_bucket">(</string>
    <string name="right_bucket">)</string>
    <string name="point">.</string>
    <string name="result">=</string>
</resources>