<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".callculator"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp">

            </TextView>
            <TextView
                android:id="@+id/formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="0"
                android:textSize="25sp"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text=""
                android:lines="7"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="right|bottom">
            </TextView>

        </LinearLayout>
    </ScrollView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/clear"
            >
        </Button>
        <Button
            android:id="@+id/left_bucket"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/left_bucket"
            >
        </Button>
        <Button
            android:id="@+id/right_bucket"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/right_bucket"
            >
        </Button>
        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/divide"
            >
        </Button>
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/seven"
            >
        </Button>
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/eight"
            >
        </Button>
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/nine"
            >
        </Button>
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/multiply"
            >
        </Button>
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/four"
            >
        </Button>
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/five"
            >
        </Button>
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/six"
            >
        </Button>
        <Button
            android:id="@+id/substract"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/sub"
            >
        </Button>
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/one"
            >
        </Button>
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/two"
            >
        </Button>
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/three"
            >
        </Button>
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/plus"
            >
        </Button>
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/delete"
            >
        </Button>
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/zero"
            >
        </Button>
        <Button
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/point"
            >
        </Button>
        <Button
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:text="@string/result"
            >
        </Button>





    </GridLayout>


</LinearLayout>